--- a/css/theme-freetype.css
+++ b/css/theme-freetype.css
@@ -41,7 +41,7 @@ a[data-toggle="tooltip"] {
 
 .navbar-inverse {
     background: #06435E url("../images/fond3.png") no-repeat right top;
-    height: 134px;
+    min-height: 134px !important;
     border-color: #015CAE;
     font-family: "Droid Sans", "sans-serif";
 }
@@ -49,7 +49,7 @@ a[data-toggle="tooltip"] {
     color: white;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover, a.fa.fa-home.fa-lg.navbar-brand:hover {
+.navbar-inverse .navbar-nav>li>a:hover, a.fa-lg.navbar-brand:hover {
      color: #f0f0f0;
 }
 
